Add delete all GPS data feature and update button styles
Introduces a new service for deleting all GPS data and integrates a confirmation modal in MapView. Removes unused button style modifiers and updates button usages to animated styles. Also adds a new localization key for delete all GPS data errors.

--- a/RettungshundeEinsatzApp/Resources/Localizable.xcstrings
+++ b/RettungshundeEinsatzApp/Resources/Localizable.xcstrings
@@ -146,6 +146,9 @@
         }
       }
     },
+    "delete_all_gps_data_error" : {
+
+    },
     "delete_my_gps_data" : {
       "localizations" : {
         "de" : {
